--- a/bower.json
+++ b/bower.json
@@ -12,9 +12,11 @@
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
     "bootstrap": "~3.3.4",
-    "angular-drag-drop": "ggoodman/angular-drag-drop#~1.0.0"
+    "angular-drag-drop": "ggoodman/angular-drag-drop#~1.0.0",
+    "angular-animate": "~1.4.1"
   },
   "resolutions": {
-    "angular": "1.4.0"
+    "angular": "1.4.1",
+    "angular-animate": "~1.4.1"
   }
 }
