--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "html5-boilerplate": "~5.2.0",
     "bootstrap": "~3.3.4",
     "angular-drag-drop": "ggoodman/angular-drag-drop#~1.0.0",
-    "angular-animate": "~1.4.1"
+    "angular-animate": "~1.4.1",
+    "angular-messages": "~1.4.1"
   },
   "resolutions": {
     "angular": "1.4.1",
